test-cases/negative/test_109_catch_without_try.lay
# negative test: catch without try
# expected: parser should reject this

catch error
  print error
end catch


